[package]
name = "taskmaster"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/commands",
    "crates/connection",
    "crates/daemonize",
    "crates/libc",
]

[dependencies]
daemonize = { path = "./crates/daemonize" }
connection = { path = "./crates/connection" }
commands = { path = "./crates/commands" }
tokio = { version = "1.43.0", features = ["full"] }
